--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
-PORT=8000;
-CORS_ORIGIN=*
-MONGODB_URL=mongodb+srv://rishabh180705:18070502@cluster0.gc0dy.mongodb.net;
+ PORT=5000;
+const CORS_ORIGIN=*
+ MONGODB_URL=mongodb+srv://rishabh180705:18070502@cluster0.gc0dy.mongodb.net
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=
 REFRESH_TOKEN_EXPIRY=10d;
+
+//cloudinary
+CLOUD_NAME=dn09bc29y;
+CLOUD_KEY=189511458994338;
+CLOUD_SECRET=7i74TvIFGPEPbwQ7MN5pw4SoF-w;
